--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,10 +34,20 @@
     <string name="sorrowful_description">Mysteries of Christ\'s passion and suffering</string>
     <string name="glorious_description">Mysteries of Christ\'s resurrection and triumph</string>
     <string name="luminous_description">Mysteries of Christ\'s public ministry and light</string>
-    
-    <!-- Counter Screen -->
+      <!-- Counter Screen -->
     <string name="counter_instructions">Press Volume Down to count up\nPress Volume Up to count down</string>
-    <string name="general_options">General Options</string>
+    <string name="general_options">General Options</string>    <string name="options">Options</string>
+    <string name="info">Info</string>
+    <string name="back">Back</string>
+    
+    <!-- Info Screen -->
+    <string name="app_info_title">Information</string>
+    <string name="app_info_name_version">OpenRosary v0.2.1</string>
+    <string name="app_info_description">Created and maintained by pinterbanget.</string>
+    <string name="app_info_features_header">Contributors</string>
+    <string name="app_info_features">• EN: Ryanson Jonathan. Scripture quotations are from the ESV® Bible (The Holy Bible, English Standard Version®), © 2001 by Crossway, a publishing ministry of Good News Publishers. ESV Text Edition: 2025. The ESV text may not be quoted in any publication made available to the public by a Creative Commons license. The ESV may not be translated in whole or in part into any other language. Used by permission. All rights reserved.\n• ID: Ryanson Jonathan. Teks Alkitab Terjemahan Baru Edisi Kedua (TB2) © LAI 2023</string>
+    <string name="app_info_attribution_header">Image Attribution</string>
+    <string name="app_info_attribution">Mystery icons:\n• Joyful Mysteries: Denis Doukhan from Pixabay\n• Sorrowful and Glorious Mysteries: falco from Pixabay\n• Luminous Mysteries: Gini George from Pixabay</string>
     
     <!-- Rosary Instructions -->
     <string name="rosary_instructions">Press Volume Down or swipe left to advance through the rosary</string>
